# agentic-memory

./: .gitignore  AGENTIC_ARCHITECTURE.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  ROADMAP.md  ROADMAP_CAPTURE_HOOKS.md  SECURITY.md  plan.md  pyproject.toml  server.json  z_PLAN.md
.agents/rules/: dreaming.md  memory-store.md
.ai-memory/: .gitignore  architecture.md  debt.md  decisions.md  episodic.md  features.md  framework-rules.md  index.md  rules.md  schemas.md  ubiquitous-language.md
.ai-memory/memory-store/: index.md
.ai-memory/memory-store/architecture/: agent-rules.md  core-characteristics.md  global-memory.md  granular-architecture-records.md  grok-support.md  overview.md  project-memory-layout.md  system-flow-component-boundaries.md
.ai-memory/memory-store/architecture/decisions/: dream-store-sub-index.md  dream-store-subfolders.md
.ai-memory/memory-store/architecture/tests/: isolated-unit-tests.md
.ai-memory/memory-store/debt/: debt-strategy.md  dreaming-roadmap.md  granular-debt-records.md  overview.md
.ai-memory/memory-store/decisions/: cli-ux.md  core-storage.md  engineering-philosophy.md  git-integration.md  granular-decisions-adr.md  llm-infrastructure.md  migrate-llm-names-heuristic-content.md  overview.md
.ai-memory/memory-store/episodic/: 2026-07-07.md  2026-07-14.md
.ai-memory/memory-store/failures/: eval-metadata-quality-failed-975527f4fa.md
.ai-memory/memory-store/features/: mcp-resources.md
.ai-memory/memory-store/rules/: mcp-agent-instructions.md
.ai-memory/memory-store/schemas/: cli-contracts.md  design-philosophy.md  eval-contracts.md  frontmatter.md  granular-contracts.md  mcp-contracts.md  overview.md
.cursor/rules/: memory-fabric.mdc
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.windsurf/rules/: memory-fabric.md
mcpb/: manifest.json  pyproject.toml
mcpb/src/: server.py
scripts/: capture_rate_benchmark.py
src/memory_fabric/: __init__.py  cli.py  client_hooks.py  clients.py  contracts.py  eval.py  frontmatter.py  installer.py  llm.py  locking.py  merge_driver.py  paths.py  security.py  server.py  storage.py  templates.py  version.py
src/memory_fabric/eval/: __init__.py  _shared.py  dream_quality.py  memory_quality.py  reports.py
src/memory_fabric/storage/: __init__.py  _core.py  _shared.py  capture.py  consolidation.py  context.py  dream.py  failures.py  finalize.py  journal.py  lifecycle.py  maps.py  migrate.py  patch.py  search.py  sections.py  snapshots.py  store.py  verify.py
tests/: _cross_process_helpers.py  test_capture.py  test_capture_rate_benchmark.py  test_client_hooks.py  test_clients.py  test_contracts.py  test_cross_process.py  test_dream_store.py  test_failures.py  test_frontmatter.py  test_hooks_e2e.py  test_installer.py  test_maps.py  test_mcp_contract.py  test_memory_fabric.py  test_merge_driver.py  test_migrate.py  test_resources.py  test_robustness.py  test_security.py  test_verify.py  test_version_truth.py
