[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-fabric"
dynamic = ["version"]
description = "File-first MCP memory fabric for AI coding assistants"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Memory Fabric Contributors" }]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
test = ["pytest>=8"]

[project.scripts]
ai-memory = "memory_fabric.cli:main"
memory-fabric-mcp = "memory_fabric.server:main"

[tool.setuptools.dynamic]
version = { attr = "memory_fabric.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memory_fabric = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["scratch", "build"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
